<resources>
    <string name="app_name">MyMusicPlayer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_view_music_title">Music title</string>
    <string name="text_view_music_license">Music: https://www.bensound.com</string>
    <string name="loop_content">loop</string>
    <string name="play_content">play</string>
    <string name="shuffle_content">shuffle</string>
    <string name="cover_content">cover</string>
    <string name="notification_channel_name">Music notification channel</string>
    <string name="notification_channel_description">some description for channel</string>
</resources>