<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".view.FragmentPlayer">

    <TextView
        android:id="@+id/music_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_view_music_title"
        android:textSize="@dimen/text_view_music_title_text_size"/>

    <ImageView
        android:id="@+id/cover"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/image_view_cover_height"
        android:src="@drawable/nebula"
        android:contentDescription="@string/cover_content" />

    <SeekBar
        android:id="@+id/seekbar"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:progress="50"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/button_loop"
            android:layout_width="@dimen/play_button_size"
            android:layout_height="@dimen/play_button_size"
            android:src="@drawable/ic_baseline_loop_24"
            android:contentDescription="@string/loop_content" />

        <ImageButton
            android:id="@+id/button_play"
            android:layout_width="@dimen/play_button_size"
            android:layout_height="@dimen/play_button_size"
            android:src="@drawable/ic_baseline_play_arrow_24"
            android:contentDescription="@string/play_content" />

        <ImageButton
            android:id="@+id/button_shuffle"
            android:layout_width="@dimen/play_button_size"
            android:layout_height="@dimen/play_button_size"
            android:src="@drawable/ic_baseline_shuffle_24"
            android:contentDescription="@string/shuffle_content" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_view_music_license" />

</LinearLayout>